--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;500&family=Open+Sans:wght@300;400;500;800&family=Roboto+Flex:opsz,wght@8..144,300;8..144,500;8..144,1000&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;500&family=Open+Sans:wght@300;400;500;800&family=Roboto+Flex:opsz,wght@8..144,300;8..144,500;8..144,1000&display=swap");
 
 * {
   box-sizing: border-box;
@@ -12,7 +12,7 @@ body {
 }
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 #root {
@@ -21,14 +21,193 @@ body {
   flex-direction: column;
 }
 
-.header {
+header {
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
   padding: 10px;
-  border-bottom: 1px solid black; 
+  border-bottom: 1px solid black;
 }
 
+/*Logo y menú principal*/
+
+.logo figure {
+  width: 150px;
+  height: 90.71px;
+  display: flex;
+}
+
+.logo figure img {
+  width: 100%;
+  height: 100%;
+}
+
+nav ul {
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: center;
+  text-align: center;
+  gap: 5px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  cursor: pointer;
+  padding: 10px 12px;
+  font-size: 20px;
+  text-transform: uppercase;
+  color: #121212;
+}
+
+nav ul li a:hover {
+  background-color: rgba(0, 0, 0, 0.756);
+  color: white;
+}
+
+/*contenedor principal*/
+main {
+  width: 95%;
+  flex: 1;
+  margin: 10px auto;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+}
+
+main.container {
+  display: grid;
+  grid-template-columns: 1.8fr 5fr;
+}
+
+main.aside-default {
+  display: grid;
+  grid-template-columns: 1fr 5fr;
+  padding: 5px;
+}
+
+main.container-aside-double {
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+}
+
+.main p,
+.parrafos p {
+  line-height: 1.5rem;
+  padding-bottom: 15px;
+}
+
+main p {
+  font-family: "Open Sans";
+  margin: 0 0 16px;
+  padding-bottom: 10px;
+  color: #555555;
+}
+
+main.section-centrar {
+  width: 75%;
+  display: block;
+  margin: 0 auto;
+}
+
+section {
+  margin: 10px;
+}
+
+section h1 {
+  text-align: left;
+  font-size: 40px;
+  margin-bottom: 0;
+}
+
+article {
+  text-align: left;
+}
+
+article h2 {
+  font-size: 35px;
+  font-weight: bolder;
+  text-align: left;
+  padding: 35px 5px 10px;
+}
+
+article h2 a {
+  text-decoration: none;
+  color: black;
+}
+
+article h3 {
+  font-size: 28px;
+  font-weight: bolder;
+  padding: 30px 5px 10px;
+}
+
+article p {
+  text-align: left;
+  font-size: 20px;
+  padding: 5px;
+}
+
+article p a {
+  font-size: 30px;
+  text-decoration: none;
+  cursor: pointer;
+  font-weight: bolder;
+}
+
+article img {
+  width: 100%;
+  object-fit: cover;
+}
+
+aside p {
+  font-size: 14px;
+}
+
+aside div.grupo {
+  border: 1px solid #f44336;
+  border-radius: 10px;
+  margin: 10px auto;
+}
+
+aside div.grupo-left {
+  border-right: 1px solid #f44336;
+  margin: 10px auto;
+}
+
+aside div.grupo h3 {
+  font-size: large;
+  color: white;
+}
+
+aside div.imagen {
+  width: 100%;
+  height: 200px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.grupo-left h3 {
+  background-color: #f1f1f1;
+}
+
+.menuAside {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 0;
+}
+
+/*pie de página*/
+footer {
+  background-color: #414b4f;
+  color: white;
+  font-size: 12px;
+  padding: 20px;
+  text-align: center;
+}
+
+/*Texto y listas globales*/
 h1 {
   font-family: "Montserrat";
   font-size: 32px;
@@ -51,27 +230,11 @@ ul b {
   font-size: 120%;
 }
 
-.logo figure {
-  width: 25%;
-  height: 25%;
-  display: flex;
-}
-
-.logo figure img {
-  width: 100%;
-  height: 100%;
-}
-
-.imagen-porcentaje img {
-  width: 30%;
-  object-fit: cover;
-}
-
-
-
-.header a {
-  text-decoration: none;
-  margin: 0;
+hr.hrCorto {
+  display: block;
+  width: 10%;
+  border: 5px solid brown;
+  position: absolute;
 }
 
 .separar {
@@ -84,6 +247,7 @@ ul b {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
 }
 
 .separador-blue-left {
@@ -98,87 +262,24 @@ ul b {
   background-color: #dcdcdc;
 }
 
-.bloque0 {
-  display: none;
-  flex-direction: row;
-  justify-content: space-between;
-  width: 100%;
-  background-color: #333333;
-  color: #aaaaaa;
-  text-align: right;
-  font-size: 12px;
+.imagen-porcentaje img {
+  width: 30%;
+  object-fit: cover;
 }
 
-.bloque0 p {
-  padding: 10px;
-}
-
-.bloque1 {
-  width: 100%;
-  padding: 50px;
-  background-color: #457992;
-  margin: 0 auto;
-  text-align: center;
-  color: white;
-  margin-bottom: 50px;
-  border-top: 5px solid #3e6d83;
-}
-
-.bloque-texto-centrado {
-  width: 100%;
-  padding: 50px;
-  background-color: #457992;
-  text-align: center;
-  color: white;
-  border-top: 5px solid #3e6d83;
-  border-bottom: 5px solid #3e6d83;
-}
-
-.resaltar h2 {
+.resaltar-texto h2 {
   font-size: 28px;
-  padding: 30px;
+  padding: 30px 10px;
+  text-shadow: 1px 1px 2px rgb(37, 37, 37);
 }
 
-.resaltar strong {
-  font-size: 40px;
+.resaltar-texto strong {
+  font-size: 45px;
   color: #eab830;
-}
-
-.bloque2,
-.bloque3 {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  padding: 50px;
-}
-
-.bloque2 p,
-.bloque3 p {
-  font-size: 18px;
 }
 
 .fondo-amarillo {
   background-color: #eab830;
-}
-
-.bloque2-item-left,
-.bloque3-item-right {
-  width: 32%;
-}
-
-.bloque2-item-right,
-.bloque3-item-left {
-  width: 68%;
-}
-
-.bloque2 a,
-.bloque3 a {
-  text-decoration: none;
-}
-
-.bloque3-item-left {
-  padding-right: 60px;
 }
 
 .migas {
@@ -203,120 +304,6 @@ hr.dividir-con-margen {
   margin: 30px auto;
 }
 
-nav ul {
-  list-style-type: none;
-  display: flex;
-  flex-direction: row;
-  align-content: center;
-  gap: 5px;
-}
-
-nav ul li a {
-  text-decoration: none;
-  cursor: pointer;
-  padding: 10px 12px;
-  font-size: 20px;
-  text-transform: uppercase;
-  color: #121212;
-}
-
-nav ul li a:hover {
-  background-color: rgba(0, 0, 0, 0.756);
-  color: white;
-}
-
-main {
-  width: 95%;
-  flex: 1;
-  margin: 10px auto;
-  display: grid;
-  grid-template-columns: 3fr 1fr;
-}
-
-.main p,
-.parrafos p {
-  line-height: 1.5rem;
-  padding-bottom: 15px;
-}
-
-main p {
-  font-family: "Open Sans";
-  margin: 0 0 16px;
-  padding-bottom: 10px;
-  color: #555555;
-}
-
-main.section-centrar {
-  width: 75%;
-  display: block;
-  margin: 0 auto;
-}
-
-main.conMenu {
-  display: grid;
-  grid-template-columns: 1.8fr 5fr;
-}
-
-main.conMenu-Left {
-  display: grid;
-  grid-template-columns: 1fr 5fr;
-}
-
-main.conMenu-right-left {
-  display: grid;
-  grid-template-columns: 1fr 3fr 1fr;
-}
-
-section {
-  margin: 10px;
-}
-
-section h1 {
-  text-align: left;
-  font-size: 40px;
-  margin-bottom: 0;
-}
-
-article {
-  text-align: left;
-}
-
-article h2 {
-  font-size: 35px;
-  font-weight: bolder;
-  text-align: left;
-  background-color: #f1f1f1;
-}
-
-article h2 a {
-  text-decoration: none;
-  color: black;
-}
-
-hr.hrCorto {
-  display: block;
-  width: 10%;
-  border: 5px solid brown;
-  position: absolute;
-}
-
-article p {
-  text-align: left;
-  font-size: 20px;
-}
-
-article p a {
-  font-size: 30px;
-  text-decoration: none;
-  cursor: pointer;
-  font-weight: bolder;
-}
-
-article img {
-  width: 100%;
-  object-fit: cover;
-}
-
 img.cursos {
   clear: both;
   width: 100%;
@@ -333,36 +320,6 @@ img.cursos {
 
 .fontZ20 {
   font-size: 20px;
-}
-
-aside p {
-  font-size: 14px;
-}
-
-aside div.grupo {
-  border: 1px solid #f44336;
-  border-radius: 10px;
-  margin: 10px auto;
-}
-
-aside div.grupo-left {
-  border-right: 1px solid #f44336;
-  margin: 10px auto;
-}
-
-.grupo-left h3 {
-  background-color: #f1f1f1;
-}
-
-aside div.grupo h3 {
-  font-size: large;
-  color: white;
-}
-
-.menuAside {
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 0;
 }
 
 .col1-Grid p {
@@ -409,27 +366,10 @@ aside div.grupo h3 {
   font-size: 130%;
 }
 
-aside div.imagen {
-  width: 100%;
-  height: 200px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-iframe {
-  /* width="684" height="313" */
+iframe {   
   width: 100%;
   height: 500px;
   object-fit: cover;
-}
-
-footer {
-  background-color: #414b4f;
-  color: white;
-  font-size: 12px;
-  padding: 20px;
-  text-align: center;
 }
 
 .botonLeerMas {
@@ -483,12 +423,13 @@ a.asideLink:hover {
   margin-bottom: 10px;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1000px) {
   main,
-  main.conMenu-Left,
-  main.conMenu-right-left {
+  main.container {
+    display: flex;
+    flex-direction: column;
     width: 100%;
-    display: block;
+    padding: 15px;
   }
 
   article img {
@@ -503,63 +444,35 @@ a.asideLink:hover {
   }
 }
 
-@media screen and (max-width: 1200px) {
-  /* .div.bloque1 h1{
-    padding: 10px 5px;
-  } */
-}
-
-@media screen and (max-width: 600px) {
-  header#menuAppHeader {
-    display: block;
-    width: 100%;
-    text-align: center;
+@media screen and (max-width: 500px) {
+  header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 
   nav ul {
-    display: block;
+    width: 100%;
+    margin: 0 auto;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
   }
 
   nav ul li {
     padding: 8px;
   }
 
+  nav ul li a {
+    padding: 0;
+  }
+
   main,
-  main.conMenu,
-  main.conMenu-Left,
-  main.conMenu-right-left,
-  main.section-centrar {
-    clear: both;
-    display: block;
+  main.container {
+    display: flex;
+    flex-direction: column;
     width: 100%;
     padding: 15px;
-    margin: 0 auto;
-  }
-
-  .bloque1 {
-    clear: both;
-    text-align: center;
-    margin: 0 auto;
-    padding: 30px 2px;
-  }
-
-  .bloque2,
-  .bloque3 {
-    display: block;
-    padding: 15px;
-  }
-
-  .bloque2-item-left,
-  .bloque3-item-right {
-    width: 100%;
-  }
-
-  .bloque2-item-right,
-  .bloque3-item-left {
-    width: 100%;
-  }
-
-  .bloque3-item-left {
-    padding-right: 15px;
   }
 }
