--- a/css/cards.css
+++ b/css/cards.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: flex-end;
 }
 
 .cards-item {
@@ -66,6 +66,12 @@
 }
 
 @media screen and (max-width: 500px) {
+  .section-default {
+    margin: 0;
+  }
+  .cards {
+    justify-content: flex-start;
+  }
   .cards-item {
     width: 45%;
   }
