mejoras al título del index y al menú de redes sociales

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;500&family=Open+Sans:wght@300;400;500;800&family=Roboto+Flex:opsz,wght@8..144,300;8..144,500;8..144,1000&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;500&family=Open+Sans:wght@300;400;500;800&family=Roboto+Flex:opsz,wght@8..144,300;8..144,500;8..144,1000&display=swap"); 
 
 * {
   box-sizing: border-box;
@@ -562,6 +562,10 @@ a.asideLink:hover {
 
   nav ul li a {
     padding: 0;
+  }
+
+  .redes-sociales {
+    gap: 20px;
   }
 
   main,
