--- a/css/site-map.css
+++ b/css/site-map.css
@@ -1,19 +1,17 @@
-
-
 .site-map-cards {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 15px;  
+  gap: 15px;
 }
 
 .sm-card {
   width: 30%;
 }
 
-.sm-card h2{
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+.sm-card h2 {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 24px;
   margin: 0;
   padding: 0;
@@ -30,6 +28,7 @@
 }
 
 .siteMap-H2 {
+  padding: 0;
   font-size: 30px;
   color: rgb(60, 60, 60);
   margin-bottom: 10px;
@@ -43,8 +42,10 @@ div#categorias h2 {
 }
 
 #lista {
-  padding-left: 30px;
+  padding: 30px 0 30px 30px;
+  background-color: aquamarine;
 }
+
 #lista li {
   padding-bottom: 10px;
   padding-left: 5px;
@@ -53,8 +54,6 @@ div#categorias h2 {
 #lista li a {
   text-decoration: none;
 }
-
-
 
 .video-imagen-texto figure {
   width: 120px;
@@ -65,7 +64,7 @@ div#categorias h2 {
 }
 
 .video-imagen-texto p {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   padding-top: 0;
   font-size: 15px;
   margin: 0 5px 0;
@@ -91,15 +90,21 @@ div#categorias h2 {
   color: white;
 }
 
-@media screen and (max-width:500px) {
+@media screen and (max-width: 800px) {
+  .sm-card {
+    width: 45%;
+  }
+}
+
+@media screen and (max-width: 450px) {
   .site-map-cards {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 15px;  
+    gap: 15px;
   }
-  
+
   .sm-card {
     width: 100%;
   }
