mejoras al estilo del menu para la selección de las categorías de los videos

--- a/css/crearVideos.css
+++ b/css/crearVideos.css
@@ -71,6 +71,12 @@ main {
   }
 }
 
+@media screen and (max-width: 800px) {
+  .ficha-video-item {
+    width: 40%;
+  }
+}
+
 @media screen and (max-width: 500px) {
   .ficha-video-item {
     width: 100%;
