--- a/css/styles.css
+++ b/css/styles.css
@@ -78,7 +78,7 @@ nav.videos ul {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: center;
   align-content: center;
   text-align: center;
   gap: 5px;
@@ -87,17 +87,17 @@ nav.videos ul {
 nav.videos ul li {
   border: 1px solid blue;
   border-radius: 5px;
+  padding: 2px 10px;
+  margin-left: 10px;
 }
 
 nav.videos ul li a {
   text-transform: none;
 }
 
-nav.videos ul li a:hover {
+nav.videos ul li:hover {
   background-color: rgba(0, 0, 0, 0.756);
   color: white;
-  padding: 0px 12px;
-  border-radius: 5px;
 }
 
 /*contenedor principal*/
