--- a/css/site-map.css
+++ b/css/site-map.css
@@ -13,7 +13,7 @@
 .sm-card h2 {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 24px;
-  margin: 0;
+  margin: 15px 0;
   padding: 0;
 }
 
