--- a/css/styles.css
+++ b/css/styles.css
@@ -88,7 +88,8 @@ nav.videos ul li {
   border: 1px solid blue;
   border-radius: 5px;
   padding: 2px 10px;
-  margin-left: 10px;
+  margin-left: 5px;
+  margin-bottom: 5px;
 }
 
 nav.videos ul li a {
@@ -99,6 +100,11 @@ nav.videos ul li:hover {
   background-color: rgba(0, 0, 0, 0.756);
   color: white;
 }
+
+.h2Videos {
+  font-size: 30px;
+}
+
 
 /*contenedor principal*/
 main {
@@ -500,6 +506,7 @@ a.asideLink:hover {
 .redes-sociales figure {
   height: 30px;
   width: 30px;
+  margin-left: 15px;
 }
 
 .redes-sociales figure img {
