--- a/css/styles.css
+++ b/css/styles.css
@@ -518,6 +518,39 @@ a.asideLink:hover {
   rotate: -15deg;
 }
 
+.redesMentores {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  list-style-type: none;  
+  margin: 0;
+}
+.redesMentores li {
+  width: 30px;
+  height: 30px;
+  background-color: rgb(0,125,218);
+  border: 2px solid rgb(247, 185, 15);
+  border-radius: 50%;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 5px;   
+}
+
+.redesMentores a {
+  color: white;
+  text-align: center;
+  text-decoration: none;
+}
+
+.redesMentores li:hover {
+  color: white;
+  background-color: #121212;
+  text-align: center;
+  text-decoration: none;
+}
+
 @media screen and (max-width: 1000px) {
   main,
   main.container {
