--- a/css/site-map.css
+++ b/css/site-map.css
@@ -54,6 +54,8 @@
   text-transform: uppercase;
 }
 
+
+
 /*Aside*/
 div#categorias h2 {
   text-transform: uppercase;
@@ -114,6 +116,38 @@ div#categorias h2 {
 .menuVideos li:hover {
   background-color: black;
   color: white;
+}
+
+.redesMentores-mapaSitio {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  list-style-type: none;  
+  margin: 0;
+}
+.redesMentores-mapaSitio li {
+  width: 30px;
+  height: 30px;
+  background-color: rgb(0,125,218);
+  border: 2px solid rgb(247, 185, 15);
+  border-radius: 50%;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 5px;   
+}
+
+.redesMentores-mapaSitio li a {
+  color: white !important;
+  text-align: center;
+  text-decoration: none !important;;
+}
+
+.redesMentores-mapaSitio li:hover {
+  color: white !important;
+  background-color: #121212;
+  
 }
 
 @media screen and (max-width: 800px) {
