--- a/css/rutas-coder11.css
+++ b/css/rutas-coder11.css
@@ -7,7 +7,7 @@ main .rutas {
   flex: 32%;
   border-radius: 10px;
   padding: 10px;
-  font-family: montserrat, arial, helvetica neue, helvetica, sans-serif;
+  /* font-family: montserrat, arial, helvetica neue, helvetica, sans-serif; */
   box-shadow: 0 0 16px -5px rgb(0 0 0 / 25%);
 }
 
