Mejoras al estilo de la lista de categoría en la página proyecto-coder11

--- a/css/styles.css
+++ b/css/styles.css
@@ -299,16 +299,16 @@ ul b {
   font-size: 120%;
 }
 
-ol.lista-categorias {
+.lista-categorias {
   padding: 15px 60px;
 }
 
-ol.lista-categorias li a {
+.lista-categorias li a {
   text-decoration: none;
   color: #0276b3;
 }
 
-ol.lista-categorias li a:hover {
+.lista-categorias li a:hover {
   text-decoration: underline;
   color: #004a72;
 }
