--- a/css/rutas-coder11.css
+++ b/css/rutas-coder11.css
@@ -9,6 +9,7 @@ main .rutas {
   padding: 10px;
   /* font-family: montserrat, arial, helvetica neue, helvetica, sans-serif; */
   box-shadow: 0 0 16px -5px rgb(0 0 0 / 25%);
+  border: 1px solid #0073ec;
 }
 
 .rutas-items {
@@ -21,12 +22,14 @@ main .rutas {
 
 .rutas-items:hover {
   /* font-size: large; */
-  border: 1px solid #0073ec;
+  border: 1px solid #ec9900;
+  box-shadow: 1px 1px 1px;
 }
 
 .rutas-items h2 {
-  font-size: 20px;
+  font-size: 40px;
   font-weight: 600;
+  color: rgb(45, 45, 45);
 }
 
 .rutas-items h3 {
@@ -104,6 +107,15 @@ li.tachar {
   border: 1px solid #0073ec;
   color: #0073ec;
   background-color: white;
+}
+
+.titulo-servicios-h2 {
+  padding-top: 0px;
+  padding-bottom: 0;
+}
+.titulo-servicios-h3 {
+  padding-top: 0px;
+  padding-bottom: 1px;
 }
 
 @media screen and (max-width: 600px) {
