--- a/css/crearVideos.css
+++ b/css/crearVideos.css
@@ -56,14 +56,14 @@ main {
 #botonCerrar {
   position: fixed;
   top: 8%;
-  margin: 0 auto;
-  right: 50%;
+  left: 50%;
+  transform: translate(-50%);
   width: 30px;
   height: 30px;
   font-size: 22px;
   border-radius: 50%;
   border: 2px solid rgb(239, 239, 239);
-  background: black;
+  background: rgb(201, 109, 5);
   color: white;
   cursor: pointer;
 }
